--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ input:focus, .mate-form-input:focus{
   box-shadow:none;
 }
 
-.mate-text-primary {
+h1,h2,h3,h4,h5, h6, label, .mate-text-primary {
   color: var(--primary-color);
 }
 
