style: re-styled ClassList as tables

--- a/src/components/classes/styles/Classes.css
+++ b/src/components/classes/styles/Classes.css
@@ -1,7 +1,11 @@
-.Classes-Header{
-    border-bottom: 2px solid var(--tertiary-color); 
+.Classes-Header {
+    border-bottom: 2px solid var(--tertiary-color);
 }
 
-.Class-Card{
-    border-bottom: 1px solid var(--tertiary-color); 
+.Class-Card {
+    border-bottom: 1px solid var(--tertiary-color);
+}
+
+.mate-table {
+    width: 100%;
 }
