renamed any components with 'Class' as 'Course' to avoid future syntax errors with 'Class'

--- a/src/components/courses/styles/Courses.css
+++ b/src/components/courses/styles/Courses.css
@@ -1,8 +1,8 @@
-.Classes-Header {
+.Courses-Header {
     border-bottom: 2px solid var(--tertiary-color);
 }
 
-.Class-Card {
+.Course-Card {
     border-bottom: 1px solid var(--tertiary-color);
 }
 
