added style to Modal-Close

--- a/src/components/general/styles/Modal.css
+++ b/src/components/general/styles/Modal.css
@@ -8,6 +8,12 @@
     z-index: 100000000;
 }
 
+.Modal-Close {
+    position: absolute;
+    top: 2.5%;
+    left: 5%;
+}
+
 .Modal .mate-btn-submit {
     position: absolute;
     width: 350px;
