--- a/src/components/user/styles/UserAvatar.css
+++ b/src/components/user/styles/UserAvatar.css
@@ -1,8 +1,17 @@
-.UserAvatar{
-    width: 48px;
-    height: 48px;
+.Avatar,
+.UserAvatar {
     overflow: hidden;
     object-fit: cover;
     border-radius: 100%;
+}
+
+.Avatar {
+    width: 40px;
+    height: 40px;
+}
+
+.UserAvatar {
+    width: 48px;
+    height: 48px;
     border: 2px solid var(--primary-color);
 }
