moved Autocomplete and added style

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --primary-color: #75F3E7;
   --secondary-color: #eeeeee;
   --tertiary-color: #393E46;
+  --tertiary-color-light: rgb(43, 47, 58);
   --danger-color: #E15554;
   --bg-color: #222831
 }
