--- a/src/components/layout/styles/Header.css
+++ b/src/components/layout/styles/Header.css
@@ -1,9 +1,14 @@
 .Header {
     border-bottom: 2px solid var(--tertiary-color);
+    position: fixed;
+    width: 100%;
+    height: 10vh;
+    z-index: 20;
 }
 
 .Header .MuiPaper-root.MuiAppBar-root.MuiAppBar-positionStatic.MuiAppBar-colorPrimary.Header-Content.MuiPaper-elevation4 {
-    padding: 1rem;
+    /* padding: 1rem; */
+    height: 10vh;
 }
 
 .MuiToolbar-root.MuiToolbar-regular.MuiToolbar-gutters {
