--- a/src/pages/styles/Feed.css
+++ b/src/pages/styles/Feed.css
@@ -1,3 +1,15 @@
+.Feed {
+    display: flex;
+    flex-direction: column;
+}
+
+.Feed__List {
+    flex: 1;
+    overflow: scroll;
+    margin-top: 10vh;
+    margin-bottom: 7rem;
+}
+
 .Post-Card {
     display: flex;
     justify-content: space-between;
