--- a/src/pages/styles/Search.css
+++ b/src/pages/styles/Search.css
@@ -1,3 +1,8 @@
+.Search {
+    display: flex;
+    flex-direction: column;
+}
+
 .Search-Header {
     /* width: 90%;
     margin: auto; */
@@ -5,11 +10,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-bottom: none;
+    box-shadow: none;
 }
 
 .Search-Categories {
     /* display: flex;
     flex-direction: row; */
+    z-index: 50;
+    background-color: var(--bg-color);
+    margin-top: 17vh;
     overflow-x: auto;
     white-space: nowrap;
     border-bottom: 1px solid var(--tertiary-color);
