--- a/src/pages/styles/Feed.css
+++ b/src/pages/styles/Feed.css
@@ -32,3 +32,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.char-count {
+    color: var(--tertiary-color);
+    float: right;
+    font-style: italic;
+}
