removed "id" parameter b/c is was being unused

--- a/src/pages/styles/StudyGroupChat.css
+++ b/src/pages/styles/StudyGroupChat.css
@@ -68,7 +68,7 @@
 
 .StudyGroupChat__Footer>form>input {
     flex: 1;
-    padding: 1rem;
+    padding: .5rem;
 }
 
 .StudyGroupChat__Footer>form>input::placeholder {
