added styles to Feed 'Add Post' button and linked 'addPost' to redux and FB

--- a/src/App.css
+++ b/src/App.css
@@ -295,6 +295,20 @@ a:hover {
   color: var(--tertiary-color);
 }
 
+/********************************* */
+/** Chat                           *
+/********************************* */
+
+.message__attachments>i {
+  color: var(--tertiary-color);
+  margin-right: .5rem;
+  /* padding: 1rem; */
+}
+
+.message__attachments>i:hover {
+  color: var(--primary-color);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
