--- a/src/pages/styles/Feed.css
+++ b/src/pages/styles/Feed.css
@@ -7,7 +7,7 @@
     flex: 1;
     overflow: scroll;
     margin-top: 10vh;
-    margin-bottom: 7rem;
+    margin-bottom: 10rem;
 }
 
 .Post-Card__Header {
@@ -25,7 +25,8 @@
 .Post-Card__Right.Post__timestamp {
     position: absolute;
     top: 8%;
-    right: 7%;
+    padding-right: 1rem;
+    right: 0;
 }
 
 .Post-Card {
@@ -34,7 +35,7 @@
     justify-content: space-between;
     position: relative;
     border-bottom: 1px solid var(--tertiary-color);
-    padding: 1.2rem 1.2rem .2rem 1.2rem;
+    padding: 1rem 1.5rem .2rem 1.5rem;
 }
 
 .Post-Card>a {
@@ -49,9 +50,12 @@
     text-align: left;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .Post-Card .Post-Card__Center .Post-Card__Body {
+    display: flex;
+    flex-direction: column;
     font-size: 14px;
 }
 
@@ -91,6 +95,17 @@
     margin-right: .5rem;
     width: .7em;
     height: .7em;
+}
+
+.Post-Card .Post-Card__Attachment {
+    width: 100%;
+    margin: 0 auto 1rem auto;
+    max-height: 100px;
+    object-fit: contain;
+}
+
+#Feed-Add-Post-Btn {
+    position: fixed;
 }
 
 /********************************* */
