--- a/src/pages/styles/PostInfo.css
+++ b/src/pages/styles/PostInfo.css
@@ -36,7 +36,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 97%;
+    width: 100%;
+    padding-left: 1.2rem;
     margin: auto;
     z-index: 25;
     /* height: 62px; */
@@ -60,8 +61,13 @@
     font-style: italic;
 }
 
-.PostInfo__Footer>form>button {
-    display: none;
+.PostInfo__Footer>form>.MuiButtonBase-root.MuiIconButton-root.Mui-disabled {
+    color: var(--tertiary-color);
+}
+
+.PostInfo__Footer>form>.MuiButtonBase-root.MuiIconButton-root {
+    color: var(--primary-color);
+    /* display: none; */
 }
 
 /********************************* */
