--- a/src/pages/styles/StudyGroupChat.css
+++ b/src/pages/styles/StudyGroupChat.css
@@ -5,6 +5,8 @@
 }
 
 .StudyGroupChat__Body {
+    display: flex;
+    flex-direction: column;
     flex: 1;
     padding: 30px;
     overflow: scroll;
