--- a/src/components/layout/styles/Header.css
+++ b/src/components/layout/styles/Header.css
@@ -14,6 +14,8 @@
 .MuiToolbar-root.MuiToolbar-regular.MuiToolbar-gutters {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .Header-Logo img {
@@ -58,7 +60,6 @@
 
 .MuiPaper-root.MuiAppBar-root.MuiAppBar-positionStatic.MuiAppBar-colorPrimary.Header-Content.MuiPaper-elevation4 {
     background-color: var(--bg-color);
-
 }
 
 .MuiBadge-root .MuiSvgIcon-root {
